--- a/style.css
+++ b/style.css
@@ -35,9 +35,6 @@ header h2, header h1, header nav {
 .myintro-inverse {
   border-radius: 0% 50%; }
 
-.myprojects {
-  border-radius: 0%; }
-
 .header a {
   color: white;
   padding: 5px;
@@ -51,5 +48,18 @@ header h2, header h1, header nav {
 @media (max-width: 546px) {
   .header {
     height: 7rem; } }
+.myprojects {
+  border-radius: 0%; }
+
+#container {
+  display: flex;
+  flex-wrap: wrap; }
+  #container div {
+    background-color: white;
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+.enable-padding {
+  padding: 1rem; }
 
 /*# sourceMappingURL=style.css.map */
